Changes made to dynamic pages

--- a/groop_demo.html
+++ b/groop_demo.html
@@ -16,7 +16,7 @@
         <!--logo and search-->
         <div class="left-side">
             <div class="logo">
-                <img src="img/icons/facebook.svg" alt="">
+                <img src="img/icons/Groop.svg" alt="">
             </div>
 
             <div class="search">
@@ -173,7 +173,7 @@
                             <div class="icon">
                                 <img src="img/stories/page-1.jpg" alt="">
                             </div>
-                            <h4>ui ux Designers workshop </h4>
+                            <h4>UI/UX Design </h4>
                         </div>
                     </div>
 
@@ -632,7 +632,7 @@
                         <div class="icon">
                             <img src="img/stories/st-1.jpeg" alt="">
                         </div>
-                        <h4>omar ui design </h4>
+                        <h4>UI/UX Design </h4>
                     </div>
                 </div>
 
